--- a/express-skills/views/skills/index.ejs
+++ b/express-skills/views/skills/index.ejs
@@ -10,14 +10,21 @@
 
 <body>
     <h1>
-        
+        Skills as of <%= time %>
     </h1>
+    <a href="/skills/new">ADD SKILL</a>
+<br/>
+<br/>
     <a href="/skills">Skills</a>
 
     <% skills.forEach(function(skill) { %>
         <li>
             <a href="/skills/<%= skill.id %>"><%= skill.skill %></a>
+
+            <form action="/skills/<%= skills.id %>?_method=DELETE" class="delete-form" method="POST">
+                <button type="submit">X</button>
         </li>
+        
     <% }) %>
 </body>
 
